--- a/style.css
+++ b/style.css
@@ -29,3 +29,24 @@
     flex:1;
     font-size: 32px;
   }
+
+  .app{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .app .btn-add{
+    background-color: rgb(246, 171, 144);
+    border: 1px solid coral;
+    min-width: 30%;
+    border-radius: 50px;
+  }
+
+  .app .show-sum{
+    border: 1px solid coral;
+    padding: 0 100px 0 100px;
+    border-radius: 50px;
+
+  }
